# i24_database_api

./: .gitignore  README.md  setup.cfg
src/i24_database_api/: __init__.py  batch_update.py  config.json  db_parameters.py  db_reader.py  db_writer.py  run_static_transformer.py  transform2.py  transformation.py
test/: db_properties.py  src  test.py  test_collection.py  test_simple.py
test/config/: TestObj.config  db_param.json  ground_truth_schema.json  reconciled_schema.json  test1.config  test2.config  test3.config  test4.config  test5.config  test6.config  test7.config  test8.config  test9.config  test_param.config  test_param_template.config  test_parameters.py
