[metadata]
name = i24_configparse
version = 0.1.1
author = Derek Gloudemans
author_email = derek.gloudemans@vanderbilt.edu
description = Configuration parsing with additional config-schema checking and a one-liner call to import and set parameters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DerekGloudemans/i24_configparse

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = configparser

[options.packages.find]
where = src
