[metadata]
name = i24_database_api
version = 0.2
author = Yanbing Wang
author_email = yanbing.wang@vanderbilt.edu
description = MongoDB database read and write
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yanb514/i24_database_api

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pymongo

[options.packages.find]
where = src
